updated comment issues and added getAddManager api changes and removed unsed imports
# Conflicts:
#	src/main/java/com/w2w/api/position/PositionController.java
